# product-listing-78

./: README.md  index.html  tailwind.config.ts
backend/: .env.example  Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs  models.rs
backend/src/handlers/: categories.rs  mod.rs  notifications.rs  products.rs  tags.rs
src/: App.tsx  index.css
src/components/: ProductForm.tsx  ProductStatus.tsx  VendorNavbar.tsx  VendorProducts.tsx
src/pages/: Index.tsx  ProductPreview.tsx  VendorNotifications.tsx
