[package]
name = "product-listing-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
image = "0.24"
base64 = "0.21.7"
env_logger = "0.10"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"